# py-ebbr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: index.md
docs/reference/: BetaMixturePrior.md  BetaPrior.md  PropTestResult.md  add_ebb_estimate.md  ebb_prop_test.md  fit_beta_mixture.md  fit_beta_prior.md  index.md  posterior_parameters.md
notebooks/: quickstart.ipynb
src/pyebbr/: __init__.py  estimation.py  mixture.py  prior.py  testing.py
src/pyebbr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_estimation.py  test_mixture.py  test_prior.py  test_testing.py
